@@ -7,17 +7,21 @@
  * This is free software released under GNU GPLv3 license
  */
 
+import org.gradle.api.logging.Logging
 import org.gradle.internal.os.OperatingSystem
+import java.nio.file.Files
+import java.nio.file.Paths
+import java.nio.file.StandardCopyOption
 import java.text.SimpleDateFormat
 import java.util.Date
 
 plugins {
   checkstyle
-  id("com.github.ben-manes.versions") version "0.51.0"
+  id("com.github.ben-manes.versions") version "0.53.0"
   java
   application
-  id("com.gradleup.shadow") version "8.3.5"
-  id("org.sonarqube") version "6.0.1.5171"
+  id("com.gradleup.shadow") version "9.2.2"
+  id("org.sonarqube") version "7.1.0.6387"
 }
 
 repositories {
@@ -31,27 +35,25 @@ application {
 dependencies {
   implementation("org.hamcrest:hamcrest:3.0")
   implementation("javax.help:javahelp:2.0.05")
-  implementation("com.fifesoft:rsyntaxtextarea:3.5.3")
+  implementation("com.fifesoft:rsyntaxtextarea:3.6.0")
   implementation("net.sf.nimrod:nimrod-laf:1.2")
   implementation("org.drjekyll:colorpicker:2.0.1")
   implementation("at.swimmesberger:swingx-core:1.6.8")
   implementation("org.scijava:swing-checkbox-tree:1.0.2")
-  implementation("org.slf4j:slf4j-api:2.0.16")
-  implementation("org.slf4j:slf4j-simple:2.0.16")
-  implementation("com.formdev:flatlaf:3.5.4")
-  implementation("commons-cli:commons-cli:1.9.0")
-  implementation("org.apache.commons:commons-text:1.13.0")
-
-  // NOTE: Do not upgrade the jflex version. Later versions do not work.
-  compileOnly("de.jflex:jflex:1.4.1")
+  implementation("org.slf4j:slf4j-api:2.0.17")
+  implementation("org.slf4j:slf4j-simple:2.0.17")
+  implementation("com.formdev:flatlaf:3.6.2")
+  implementation("commons-cli:commons-cli:1.11.0")
+  implementation("com.vladsch.flexmark:flexmark-all:0.64.8")
+  implementation("org.apache.commons:commons-text:1.14.0")
 
   // NOTE: Be aware of reported issues with Eclipse and Batik
   // See: https://github.com/logisim-evolution/logisim-evolution/issues/709
   // implementation("org.apache.xmlgraphics:batik-swing:1.14")
 
-  testImplementation(platform("org.junit:junit-bom:5.11.4"))
-  testImplementation("org.junit.jupiter:junit-jupiter:5.11.4")
-  testImplementation("org.mockito:mockito-junit-jupiter:5.15.2")
+  testImplementation(platform("org.junit:junit-bom:6.0.1"))
+  testImplementation("org.junit.jupiter:junit-jupiter:6.0.1")
+  testImplementation("org.mockito:mockito-junit-jupiter:5.20.0")
   testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
@@ -63,6 +65,8 @@ val APP_VERSION = "appVersion"
 val APP_VERSION_SHORT = "appVersionShort"
 val APP_URL = "appUrl"
 val BUILD_DIR = "buildDir"
+val JDEPS = "jdeps"
+val JDEPS_FILE = "jdepsFile"
 val JPACKAGE = "jpackage"
 val LIBS_DIR = "libsDir"
 val LINUX_PARAMS = "linuxParameters"
@@ -104,7 +108,7 @@ extra.apply {
   logger.info("appVersionShort: ${appVersionShort}")
 
   // Architecture used for build
-  val osArch = System.getProperty("os.arch") ?: throw GradleException("os.arch is not set")
+  val osArch = providers.systemProperty("os.arch").get()
   set(OS_ARCH, osArch)
 
   // Build Directory
@@ -127,6 +131,10 @@ extra.apply {
   val supportDir="${projectDir}/support/jpackage"
   set(SUPPORT_DIR, supportDir)
 
+  // Project name with uppercase first letter
+  val uppercaseProjectName = project.name.replaceFirstChar { it.uppercase() }.trim()
+  set(UPPERCASE_PROJECT_NAME, uppercaseProjectName)
+
   // Base name of produced artifacts. Suffixes will be added later by relevant tasks.
   val baseFilename = "${project.name}-${appVersion}"
   set(TARGET_FILE_PATH_BASE, "${targetDir}/${baseFilename}")
@@ -142,9 +150,13 @@ extra.apply {
   logger.debug("shadowJarFilename: \"${shadowJarFilename}\"")
 
   // JDK/jpackage vars
-  val javaHome = System.getProperty("java.home") ?: throw GradleException("java.home is not set")
+  val javaHome = providers.systemProperty("java.home").get()
   val jpackage = "${javaHome}/bin/jpackage"
   set(JPACKAGE, jpackage)
+  val jdeps = "${javaHome}/bin/jdeps"
+  set(JDEPS, jdeps)
+  val jdepsFile = "${buildDir}/neededJavaModules.txt"
+  set(JDEPS_FILE, jdepsFile)
 
   // Copyrights note.
   val copyrights = "Copyright ©2001–${SimpleDateFormat("yyyy").format(Date())} ${project.name} developers"
@@ -180,8 +192,6 @@ extra.apply {
   set(LINUX_PARAMS, linuxParams)
 
   // All the macOS specific stuff.
-  val uppercaseProjectName = project.name.replaceFirstChar { it.uppercase() }.trim()
-  set(UPPERCASE_PROJECT_NAME, uppercaseProjectName)
   set(APP_DIR_NAME, "${buildDir}/macOS-${osArch}/${uppercaseProjectName}.app")
 }
 
@@ -193,7 +203,7 @@ java {
   }
 }
 
-task<Jar>("sourcesJar") {
+tasks.register<Jar>("sourcesJar") {
   group = "build"
   description = "Creates a JAR archive with project sources."
   dependsOn.add("classes")
@@ -203,75 +213,137 @@ task<Jar>("sourcesJar") {
   archiveVersion.set(ext.get(APP_VERSION) as String)
 }
 
+object func {
+  val logger: Logger = Logging.getLogger("BuildUtils")
 
+  /**
+   * Helper method that simplifies running external commands using ProcessBuilder().
+   * Will throw GradleException on command failure (non-zero return code).
+   *
+   * params: List of strings which signifies the external program file to be invoked and its arguments (if any).
+   * exMsg: Optional error message to be used with thrown exception on failure.
+   *
+   * Returns content of invoked app's stdout
+   */
+  fun runCommand(params: List<String>, exceptionMsg: String): String {
+    val procBuilder = ProcessBuilder()
+    procBuilder
+      .redirectOutput(ProcessBuilder.Redirect.PIPE)
+      .redirectError(ProcessBuilder.Redirect.PIPE)
+      .command(params)
+    val proc = procBuilder.start()
+
+    logger.debug("EXECUTING CMD: " + params.joinToString(" "))
+
+    var rc = -1
+    try {
+      rc = proc.waitFor()
+      logger.debug("CMD COMPLETED. RC: ${rc}")
+    } catch (ex: Exception) {
+      logger.error(ex.message)
+      logger.error(ex.stackTraceToString())
+    }
+
+    if (rc != 0) {
+      logger.error(proc.errorStream.bufferedReader().readText().trim())
+      logger.error("Command \"${params[0]}\" failed with RC ${rc}.")
+      throw GradleException(exceptionMsg)
+    }
+
+    return proc.inputStream.bufferedReader().readText().trim()
+  }
+
+  /** Helper function to remove all contents from the given directory */
+  fun deleteDirectoryContents(directory: String) {
+    val dir = File(directory)
+    if (!dir.isDirectory) {
+      throw GradleException("Cannot remove contents of ${directory}")
+    }
+    val dirList = File(directory).list()
+    if (dirList == null) return
+    for (file in dirList) {
+      val filename = "${directory}/$file"
+      val theFile = File(filename)
+      if (theFile.isDirectory()) {
+        deleteDirectoryContents(filename)
+      }
+      if (!theFile.delete()) {
+        throw GradleException("Could not delete ${filename}")
+      }
+    }
+  }
+
+  /** Helper function to copy a file from a source location to a destination */
+  fun copyFile(from: String, to:String) {
+    try {
+      Files.copy(Paths.get(from), Paths.get(to), StandardCopyOption.REPLACE_EXISTING)
+    } catch (ex: Exception) {
+      logger.error(ex.message)
+      throw GradleException("Failed to copy file from ${from} to ${to}")
+    }
+  }
+
+  /**
+   * Helper function to verify the distribution file now exists in build/dist.
+   * It issues a warning if it does not and also lists the contents of its directory.
+   */
+  fun verifyFileExists(filename: String) {
+    val theFile = File(filename)
+    if (theFile.isFile()) {
+      return
+    }
+    logger.warn("*** WARNING ***");
+    logger.warn("File does not exist: ${filename}")
+    val parentDir = theFile.getParentFile();
+    if (parentDir != null && parentDir.isDirectory()) {
+      logger.warn("Directory actually contains:")
+      val dirList = parentDir.list()
+      if (dirList == null) return;
+      for (file in dirList) {
+        logger.warn("  ${file}")
+      }
+    } else {
+      logger.warn("Parent directory does not exist: ${parentDir}");
+    }
+  }
+
+  /**
+   * Function that returns the named parameters list plus the --adds-modules option
+   */
+  fun getNeededModules(fileName: String): List<String> {
+    val file = File(fileName)
+    if (!file.isFile()) {
+      throw GradleException("No ${fileName} exists")
+    }
+    val dependencies = File(fileName).readLines()[0]
+    return listOf("--add-modules", dependencies)
+    // return (ext.get(parametersName) as List<Any?>).filterIsInstance<String>() + addModules
+  }
+}
 
 /**
- * Helper method that simplifies runining external commands using ProcessBuilder().
- * Will throw GradleException on command failure (non-zero return code).
+ * Task createNeededJavaModules
  *
- * params: List of strings which signifies the external program file to be invoked and its arguments (if any).
- * exMsg: Optional error message to be used with thrown exception on failure.
- *
- * Returns content of invoked app's stdout
+ * Uses jdeps to create a file containing a list of the needed Java modules.
  */
-fun runCommand(params: List<String>, exceptionMsg: String): String {
-  val procBuilder = ProcessBuilder()
-  procBuilder
-    .redirectOutput(ProcessBuilder.Redirect.PIPE)
-    .redirectError(ProcessBuilder.Redirect.PIPE)
-    .command(params)
-  val proc = procBuilder.start()
+tasks.register("createNeededJavaModules") {
+  group = "build"
+  description = "Creates a file containing the jdeps dependencies"
+  dependsOn("shadowJar")
 
-  logger.debug("EXECUTING CMD: " + params.joinToString(" "))
+  val libsDir = ext.get(LIBS_DIR) as String
+  val shadowJarFilename = ext.get(SHADOW_JAR_FILE_NAME) as String
+  val jarFileName = "${libsDir}/${shadowJarFilename}"
+  val outFileName = ext.get(JDEPS_FILE) as String
+  val cmd = listOf(ext.get(JDEPS) as String, "--multi-release", "base","--print-module-deps", "--ignore-missing-deps", jarFileName)
 
-  var rc = -1
-  try {
-    rc = proc.waitFor()
-    logger.debug("CMD COMPLETED. RC: ${rc}")
-  } catch (ex: Exception) {
-    logger.error(ex.message)
-    logger.error(ex.stackTraceToString())
-  }
+  inputs.file(jarFileName)
+  outputs.file(outFileName)
 
-  if (rc != 0) {
-    logger.error(proc.errorStream.bufferedReader().readText().trim())
-    logger.error("Command \"${params[0]}\" failed with RC ${rc}.")
-    throw GradleException(exceptionMsg)
-  }
-
-  return proc.inputStream.bufferedReader().readText().trim()
-}
-
-/**
- * Helper function to remove all contents from the given directory
-*/
-fun deleteDirectoryContents(directory: String) {
-  for (file in File(directory).list()) {
-    if (!delete("${directory}/${file}")) {
-      throw GradleException("Failed to remove old file: ${directory}${file}")
-    }
-  }
-}
-
-/**
- * Helper function to verify the distribution file now exists in build/dist.
- * It issues a warning if it does not and also lists the contents of its directory.
-*/
-fun verifyFileExists(filename: String) {
-  var theFile = File(filename)
-  if (theFile.isFile()) {
-    return
-  }
-  logger.warn("*** WARNING ***");
-  logger.warn("File does not exist: ${filename}")
-  var parentDir = theFile.getParentFile();
-  if (parentDir != null && parentDir.isDirectory()) {
-    logger.warn("Directory actually contains:")
-    for (file in parentDir.list()) {
-      logger.warn("  ${file}")
-    }
-  } else {
-    logger.warn("Parent directory does not exist: ${parentDir}");
+  doLast {
+    val neededJavaModules = func.runCommand(cmd, "Error while finding Java dependencies with jdeps.").trim()
+    File(outFileName).writeText(neededJavaModules)
+    func.verifyFileExists(outFileName)
   }
 }
 
@@ -280,27 +352,22 @@ fun verifyFileExists(filename: String) {
  *
  * Creates a packageInput directory containing only the current shadowJar file
  * because jpackage includes everything in its input directory in the package.
-*/
+ */
 tasks.register("createPackageInput") {
   group = "build"
   description = "Creates a packageInput directory that only contains the current shadowJar file"
   dependsOn("shadowJar")
+
   val libsDir = ext.get(LIBS_DIR) as String
   val shadowJarFilename = ext.get(SHADOW_JAR_FILE_NAME) as String
   val packageInputDir = ext.get(PACKAGE_INPUT_DIR) as String
+
   inputs.file("${libsDir}/${shadowJarFilename}")
   outputs.dir(packageInputDir)
 
   doLast {
-    deleteDirectoryContents(packageInputDir)
-    val copyReturn = copy {
-      from(libsDir)
-      into(packageInputDir)
-      include(shadowJarFilename)
-    }
-    if (!copyReturn.didWork) {
-      throw GradleException("createPackageInput failed to copy: ${shadowJarFilename}")
-    }
+    func.deleteDirectoryContents(packageInputDir)
+    func.copyFile("${libsDir}/${shadowJarFilename}", "${packageInputDir}/${shadowJarFilename}")
   }
 }
 
@@ -312,15 +379,27 @@ tasks.register("createPackageInput") {
 tasks.register("createDeb") {
   group = "build"
   description = "Makes DEB Linux installation package."
-  dependsOn("createPackageInput")
-  inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
-  inputs.dir("${ext.get(SUPPORT_DIR) as String}/linux")
+  dependsOn("createPackageInput", "createNeededJavaModules")
 
   // Debian uses `_` to separate name from version string.
   // https://www.debian.org/doc/manuals/debian-faq/pkg-basics.en.html
   val appVersion = ext.get(APP_VERSION) as String
   val targetDir = ext.get(TARGET_DIR) as String
-  val outputFile = "${targetDir}/${project.name}_${appVersion}_amd64.deb"
+
+  // Map system architecture to Debian package architecture naming convention
+  val systemArch = (ext.get(OS_ARCH) as String).lowercase()
+  val debArch = when (systemArch) {
+    "x86_64", "amd64" -> "amd64"
+    "aarch64", "arm64" -> "arm64"
+    else -> systemArch
+  }
+  val outputFile = "${targetDir}/${project.name}_${appVersion}_${debArch}.deb"
+  val linuxParams = (ext.get(LINUX_PARAMS) as List<Any?>).filterIsInstance<String>()
+  val jdepsFile = ext.get(JDEPS_FILE) as String
+
+  inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
+  inputs.dir("${ext.get(SUPPORT_DIR) as String}/linux")
+  inputs.file(jdepsFile)
   outputs.file(outputFile)
 
   doFirst {
@@ -330,9 +409,9 @@ tasks.register("createDeb") {
   }
 
   doLast {
-    val params = (ext.get(LINUX_PARAMS) as List<Any?>).filterIsInstance<String>() + listOf("--type", "deb")
-    runCommand(params, "Error while creating the DEB package.")
-    verifyFileExists(outputFile);
+    val params = linuxParams + func.getNeededModules(jdepsFile) + listOf("--type", "deb")
+    func.runCommand(params, "Error while creating the DEB package.")
+    func.verifyFileExists(outputFile);
   }
 }
 
@@ -344,10 +423,22 @@ tasks.register("createDeb") {
 tasks.register("createRpm") {
   group = "build"
   description = "Makes RPM Linux installation package."
-  dependsOn("createPackageInput")
+  dependsOn("createPackageInput", "createNeededJavaModules")
+
+  // Map system architecture to RPM package architecture naming convention
+  val systemArch = (ext.get(OS_ARCH) as String).lowercase()
+  val rpmArch = when (systemArch) {
+    "x86_64", "amd64" -> "x86_64"
+    "aarch64", "arm64" -> "aarch64"
+    else -> systemArch
+  }
+  val outputFile = "${ext.get(TARGET_FILE_PATH_BASE) as String}-1.${rpmArch}.rpm"
+  val linuxParams = (ext.get(LINUX_PARAMS) as List<Any?>).filterIsInstance<String>()
+  val jdepsFile = ext.get(JDEPS_FILE) as String
+
   inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
   inputs.dir("${ext.get(SUPPORT_DIR) as String}/linux")
-  var outputFile = "${ext.get(TARGET_FILE_PATH_BASE) as String}-1.x86_64.rpm"
+  inputs.file(jdepsFile)
   outputs.file(outputFile);
 
   doFirst {
@@ -357,9 +448,9 @@ tasks.register("createRpm") {
   }
 
   doLast {
-    val params = (ext.get(LINUX_PARAMS) as List<Any?>).filterIsInstance<String>() + listOf("--type", "rpm")
-    runCommand(params, "Error while creating the RPM package.")
-    verifyFileExists(outputFile);
+    val params = linuxParams + func.getNeededModules(jdepsFile) + listOf("--type", "rpm")
+    func.runCommand(params, "Error while creating the RPM package.")
+    func.verifyFileExists(outputFile);
   }
 }
 
@@ -371,14 +462,20 @@ tasks.register("createRpm") {
 tasks.register("createMsi") {
   group = "build"
   description = "Makes the Windows installation package."
-  dependsOn("createPackageInput")
+  dependsOn("createPackageInput", "createNeededJavaModules")
 
   val supportDir = ext.get(SUPPORT_DIR) as String
   val osArch = ext.get(OS_ARCH) as String
+  val projectName = project.name
+  val sharedParams = (ext.get(SHARED_PARAMS) as List<Any?>).filterIsInstance<String>()
+  val jdepsFile = ext.get(JDEPS_FILE) as String
+  val outputFile = "${ext.get(TARGET_FILE_PATH_BASE_SHORT) as String}-${osArch}.msi"
+  val targetDir = ext.get(TARGET_DIR) as String
+  val version = ext.get(APP_VERSION_SHORT) as String
 
   inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
   inputs.dir("${supportDir}/windows")
-  var outputFile = "${ext.get(TARGET_FILE_PATH_BASE_SHORT) as String}-${osArch}.msi"
+  inputs.file(jdepsFile)
   outputs.file(outputFile);
 
   doFirst {
@@ -388,14 +485,12 @@ tasks.register("createMsi") {
   }
 
   doLast {
-    val targetDir = ext.get(TARGET_DIR) as String
-    val version = ext.get(APP_VERSION_SHORT) as String
-    val params = (ext.get(SHARED_PARAMS) as List<Any?>).filterIsInstance<String>() + listOf(
-        "--name", project.name,
+    val params = sharedParams + func.getNeededModules(jdepsFile) + listOf(
+        "--name", projectName,
         "--dest", targetDir,
         "--file-associations", "${supportDir}/windows/file.jpackage",
         "--icon", "${supportDir}/windows/Logisim-evolution.ico",
-        "--win-menu-group", project.name as String,
+        "--win-menu-group", projectName,
         "--win-shortcut",
         "--win-dir-chooser",
         "--win-menu",
@@ -405,20 +500,85 @@ tasks.register("createMsi") {
         // NOTE: any change to version **format** may require editing of .github/workflows/nightly.yml too!
         "--app-version", version,
     )
-    runCommand(params, "Error while creating the MSI package.")
-    val fromFile = "${project.name}-${version}.msi"
-    val copyReturn = copy {
-      from(targetDir)
-      into(targetDir)
-      include(fromFile)
-      rename(fromFile, "${project.name}-${version}-${osArch}.msi")
-    }
-    if (!copyReturn.didWork) {
-      throw GradleException("createMsi failed to rename .msi file to include architecture ${osArch}")
-    }
-    delete("${targetDir}/${fromFile}")
-    verifyFileExists(outputFile);
+    func.runCommand(params, "Error while creating the MSI package.")
+    val fromFile = "${targetDir}/${projectName}-${version}.msi"
+    val toFile = "${targetDir}/${projectName}-${version}-${osArch}.msi"
+    func.copyFile(fromFile, toFile)
+    File(fromFile).delete()
+    func.verifyFileExists(outputFile);
   }
+}
+
+
+/**
+ * Task: createExe
+ *
+ * Creates an executable for Windows.
+ */
+tasks.register("createExe") {
+  group = "build"
+  description = "Creates the executable for Windows"
+  dependsOn("createPackageInput", "createNeededJavaModules")
+
+  val supportDir = ext.get(SUPPORT_DIR) as String
+  val buildDir = ext.get(BUILD_DIR) as String
+  val osArch = ext.get(OS_ARCH) as String
+  val projectName = project.name
+  val dest = "${buildDir}/windows-${osArch}"
+  val version = ext.get(APP_VERSION_SHORT) as String
+  val sharedParams = (ext.get(SHARED_PARAMS) as List<Any?>).filterIsInstance<String>()
+  val jdepsFile = ext.get(JDEPS_FILE) as String
+
+
+  inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
+  inputs.dir("${supportDir}/windows")
+  inputs.file(jdepsFile)
+  outputs.dir("$dest/$projectName")
+
+  doFirst {
+    if (!OperatingSystem.current().isWindows) {
+      throw GradleException("This task runs on Windows only.")
+    }
+  }
+
+  doLast {
+    func.deleteDirectoryContents(dest)
+    val params = sharedParams + func.getNeededModules(jdepsFile) + listOf(
+        "--name", projectName,
+        "--dest", dest,
+        "--icon", "${supportDir}/windows/Logisim-evolution.ico",
+        "--type", "app-image",
+        // we MUST use short version form (without any suffix like "-dev", as it is not allowed in MSI package:
+        // https://docs.microsoft.com/en-us/windows/win32/msi/productversion?redirectedfrom=MSDN
+        // NOTE: any change to version **format** may require editing of .github/workflows/nightly.yml too!
+        "--app-version", version,
+    )
+    func.runCommand(params, "Error while creating the Windows executable.")
+    func.verifyFileExists("${dest}/${projectName}/${projectName}.exe")
+  }
+}
+
+/**
+ * Task: createWindowsPortableZip
+ *
+ * Create a self-contained archive for Windows.
+ */
+tasks.register<Zip>("createWindowsPortableZip") {
+  group = "build"
+  description = "Makes the self-contained zip archive for Windows"
+
+  val inputFiles = tasks.getByName("createExe").outputs.files
+
+  dependsOn("createExe")
+  from(inputFiles)
+
+  val osArch = ext.get(OS_ARCH) as String
+  val version = ext.get(APP_VERSION) as String
+  val targetDir = ext.get(TARGET_DIR) as String
+  val projectName = project.name
+
+  archiveFileName = "${projectName}-${version}-windows-${osArch}.zip"
+  destinationDirectory.set(file(targetDir))
 }
 
 /**
@@ -431,12 +591,19 @@ tasks.register("createApp") {
   val buildDir = ext.get(BUILD_DIR) as String
   val arch = ext.get(OS_ARCH) as String
   val dest = "${buildDir}/macOS-${arch}"
+  val sharedParams = (ext.get(SHARED_PARAMS) as List<Any?>).filterIsInstance<String>()
+  val jdepsFile = ext.get(JDEPS_FILE) as String
+  val appDirName = ext.get(APP_DIR_NAME) as String
+  val projectName = ext.get(UPPERCASE_PROJECT_NAME) as String
+  val appVersion = ext.get(APP_VERSION_SHORT) as String
 
   group = "build"
   description = "Makes the macOS application."
-  dependsOn("createPackageInput")
+  dependsOn("createPackageInput", "createNeededJavaModules")
+
   inputs.dir(ext.get(PACKAGE_INPUT_DIR) as String)
   inputs.dir("${supportDir}/macos")
+  inputs.file(jdepsFile)
   outputs.dir(dest)
 
   doFirst {
@@ -446,24 +613,23 @@ tasks.register("createApp") {
   }
 
   doLast {
-    deleteDirectoryContents(dest)
-    val params = (ext.get(SHARED_PARAMS) as List<Any?>).filterIsInstance<String>() + listOf(
+    func.deleteDirectoryContents(dest)
+    val params = sharedParams + func.getNeededModules(jdepsFile) + listOf(
         "--dest", dest,
-        "--name", ext.get(UPPERCASE_PROJECT_NAME) as String,
+        "--name", projectName,
         "--file-associations", "${supportDir}/macos/file.jpackage",
         "--icon", "${supportDir}/macos/Logisim-evolution.icns",
         // app versioning is strictly checked for macOS. No suffix allowed for `app-image` type.
-        "--app-version", ext.get(APP_VERSION_SHORT) as String,
+        "--app-version", appVersion,
         "--type", "app-image",
         "--mac-app-category", "education"
     )
-    runCommand(params, "Error while creating the .app directory.")
+    func.runCommand(params, "Error while creating the .app directory.")
 
-    val appDirName = ext.get(APP_DIR_NAME) as String
     if ("x86_64".equals(arch)) {
       val pListFilename = "${appDirName}/Contents/Info.plist"
       val tempPList = "${dest}/Info.plist"
-      runCommand(listOf(
+      func.runCommand(listOf(
           "awk",
           "{print >\"${tempPList}\"};"
               + "/NSHighResolutionCapable/{"
@@ -473,11 +639,11 @@ tasks.register("createApp") {
           pListFilename,
       ), "Error while patching Info.plist file.")
 
-      runCommand(listOf(
+      func.runCommand(listOf(
           "mv", tempPList, pListFilename
       ), "Error while moving Info.plist into the .app directory.")
 
-      runCommand(listOf(
+      func.runCommand(listOf(
           "codesign", "--force", "--sign", "-", appDirName
       ), "Error while executing: codesign")
     }
@@ -496,10 +662,13 @@ tasks.register("createDmg") {
 
   val appDirName = ext.get(APP_DIR_NAME) as String
   val osArch = ext.get(OS_ARCH) as String
+  val projectName = project.name
+  val jPackage = ext.get(JPACKAGE) as String
+  val appVersion = ext.get(APP_VERSION_SHORT) as String
+  val targetDir = ext.get(TARGET_DIR) as String
+  val outputFile = "${ext.get(TARGET_FILE_PATH_BASE) as String}-${osArch}.dmg"
 
   inputs.dir(appDirName)
-
-  val outputFile = "${ext.get(TARGET_FILE_PATH_BASE) as String}-${osArch}.dmg"
   outputs.file(outputFile);
 
   doFirst {
@@ -510,160 +679,108 @@ tasks.register("createDmg") {
 
   doLast {
     val params = listOf(
-        ext.get(JPACKAGE) as String,
+        jPackage,
         "--app-image", appDirName,
-        "--name", project.name,
-        // We can pass full version here, even if contains suffix part too.
-        // We also append the architecture to add it to the package name.
-        "--app-version", "${ext.get(APP_VERSION) as String}-${osArch}",
-        "--dest", ext.get(TARGET_DIR) as String,
+        "--name", projectName,
+        // app versioning is strictly checked for macOS. No suffix allowed for `app-image` type.
+        "--app-version", appVersion,
+        "--dest", targetDir,
         "--type", "dmg",
       )
-    runCommand(params, "Error while creating the DMG package")
-    verifyFileExists(outputFile);
+    func.runCommand(params, "Error while creating the DMG package")
+    val fromFile = "${targetDir}/${projectName}-${appVersion}.dmg"
+    val toFile = "${outputFile}"
+    func.copyFile(fromFile, toFile)
+    File(fromFile).delete()
+    func.verifyFileExists(outputFile);
   }
-}
-
-/**
- * Generates Java class file with project information like current version, branch name, last commit hash etc.
- */
-fun genBuildInfo(buildInfoFilePath: String) {
-  val now = Date()
-  val nowIso = SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssZ").format(now)
-
-  var branchName = "";
-  var branchLastCommitHash = "";
-  var buildId = "(Not built from Git repo)";
-  if (file("${projectDir}/.git").exists()) {
-    var errMsg = "Failed getting branch name."
-    branchName = runCommand(listOf("git", "-C", projectDir.toString(), "rev-parse", "--abbrev-ref", "HEAD"), errMsg)
-
-    errMsg = "Failed getting last commit hash."
-    branchLastCommitHash = runCommand(listOf("git", "-C", projectDir.toString(), "rev-parse", "--short=8", "HEAD"), errMsg)
-    buildId = "${branchName}/${branchLastCommitHash}";
-  }
-  val currentMillis = Date().time
-  val buildYear = SimpleDateFormat("yyyy").format(now)
-  val appVersion = ext.get(APP_VERSION) as String
-  val projectName = project.name.replaceFirstChar { it.uppercase() }.trim()
-  val displayName = "${projectName} v${appVersion}"
-  val url = ext.get(APP_URL) as String
-
-  val buildInfoClass = """
-      // ************************************************************************
-      // THIS IS A COMPILE TIME GENERATED FILE! DO NOT EDIT BY HAND!
-      // Generated at ${nowIso}
-      // ************************************************************************
-
-      package com.cburch.logisim.generated;
-
-      import com.cburch.logisim.LogisimVersion;
-      import java.util.Date;
-
-      public final class BuildInfo {
-        // Build time VCS details
-        public static final String branchName = "${branchName}";
-        public static final String branchLastCommitHash = "${branchLastCommitHash}";
-        public static final String buildId = "${buildId}";
-
-        // Project build timestamp
-        public static final long millis = ${currentMillis}L; // keep trailing 'L'
-        public static final String year = "${buildYear}";
-        public static final String dateIso8601 = "${nowIso}";
-        public static final Date date = new Date();
-        static { date.setTime(millis); }
-
-        // Project version
-        public static final LogisimVersion version = LogisimVersion.fromString("${appVersion}");
-        public static final String name = "${projectName}";
-        public static final String displayName = "${displayName}";
-        public static final String url = "${url}";
-
-        // JRE info
-        public static final String jvm_version =
-            String.format("%s v%s", System.getProperty("java.vm.name"), System.getProperty("java.version"));
-        public static final String jvm_vendor = System.getProperty("java.vendor");
-      }
-      // End of generated BuildInfo
-
-      """
-
-  logger.info("Generating: ${buildInfoFilePath}")
-  val buildInfoFile = File(buildInfoFilePath)
-  buildInfoFile.parentFile.mkdirs()
-  file(buildInfoFilePath).writeText(buildInfoClass.trimIndent())
 }
 
 /**
  * Task: genBuildInfo
  *
- * Wrapper task for genBuildInfo() method generating BuildInfo class.
- * No need to trigger it manually.
+ * Generates Java class file with project information like current version, branch name, last commit hash etc.
  */
 tasks.register("genBuildInfo") {
   // Target location for generated files.
   val buildDir = ext.get(BUILD_DIR) as String
   val buildInfoDir = "${buildDir}/generated/logisim/java/com/cburch/logisim/generated"
+  val projectDir = project.projectDir.path as String
 
   group = "build"
   description = "Creates Java class file with vital project information."
 
-  // TODO: we should not have hardcoded path here but use default sourcesSet maybe?
   inputs.dir("${projectDir}/src")
   inputs.dir(ext.get(SUPPORT_DIR) as String)
   inputs.files("${projectDir}/gradle.properties", "${projectDir}/README.md", "${projectDir}/LICENSE.md")
   outputs.dir(buildInfoDir)
 
+  val buildInfoFilePath = "${buildInfoDir}/BuildInfo.java"
+  val appVersion = ext.get(APP_VERSION) as String
+  val projectName = ext.get(UPPERCASE_PROJECT_NAME) as String
+  val displayName = "${projectName} v${appVersion}"
+  val url = ext.get(APP_URL) as String
+
   doLast {
-    // Full path to the Java class file to be generated.
-    genBuildInfo("${buildInfoDir}/BuildInfo.java")
-  }
-}
+    val now = Date()
+    val nowIso = SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssZ").format(now)
 
-/**
- * Task genVhdlSyntax
- *
- * Generates the VhdlSyntax.java file
-*/
-tasks.register("genVhdlSyntax") {
-  val sourceFile = "${projectDir}/src/main/jflex/com/cburch/logisim/vhdl/syntax/VhdlSyntax.jflex"
-  val skeletonFile = "${projectDir}/support/jflex/skeleton.default"
-  val buildDir = ext.get(BUILD_DIR) as String
-  val targetDir = "${buildDir}/generated/logisim/java/com/cburch/logisim/vhdl/syntax/"
+    var branchName = ""
+    var branchLastCommitHash = "";
+    var buildId = "(Not built from Git repo)";
+    if (File("${projectDir}/.git").exists()) {
+      var errMsg = "Failed getting branch name."
+      branchName = func.runCommand(listOf("git", "-C", projectDir, "rev-parse", "--abbrev-ref", "HEAD"), errMsg)
+      errMsg = "Failed getting last commit hash."
+      branchLastCommitHash = func.runCommand(listOf("git", "-C", projectDir, "rev-parse", "--short=8", "HEAD"), errMsg)
+      buildId = "${branchName}/${branchLastCommitHash}"
+    }
 
-  group = "build"
-  description = "Generates VhdlSyntax.java"
-  inputs.files(sourceFile)
-  inputs.files(skeletonFile)
-  outputs.dir(targetDir)
+    val currentMillis = Date().time
+    val buildYear = SimpleDateFormat("yyyy").format(now)
+    val buildInfoClass = """
+        // ************************************************************************
+        // THIS IS A COMPILE TIME GENERATED FILE! DO NOT EDIT BY HAND!
+        // Generated at ${nowIso}
+        // ************************************************************************
 
-  var jflexJarFileName = ""
+        package com.cburch.logisim.generated;
 
-  doFirst() {
-    configurations.compileClasspath {
-      resolvedConfiguration.resolvedArtifacts.forEach { ra: ResolvedArtifact ->
-        val id = ra.moduleVersion.id
-        if ("de.jflex".equals(id.group) && "jflex".equals(id.name)) {
-          jflexJarFileName = ra.file.toString()
+        import com.cburch.logisim.LogisimVersion;
+        import java.util.Date;
+
+        public final class BuildInfo {
+          // Build time VCS details
+          public static final String branchName = "${branchName}";
+          public static final String branchLastCommitHash = "${branchLastCommitHash}";
+          public static final String buildId = "${buildId}";
+
+          // Project build timestamp
+          public static final long millis = ${currentMillis}L; // keep trailing 'L'
+          public static final String year = "${buildYear}";
+          public static final String dateIso8601 = "${nowIso}";
+          public static final Date date = new Date();
+          static { date.setTime(millis); }
+
+          // Project version
+          public static final LogisimVersion version = LogisimVersion.fromString("${appVersion}");
+          public static final String name = "${projectName}";
+          public static final String displayName = "${displayName}";
+          public static final String url = "${url}";
+
+          // JRE info
+          public static final String jvm_version =
+              String.format("%s v%s", System.getProperty("java.vm.name"), System.getProperty("java.version"));
+          public static final String jvm_vendor = System.getProperty("java.vendor");
         }
-      }
-    }
-    if (jflexJarFileName.isEmpty()) {
-      throw GradleException("Could not find jflex jar file.")
-    }
-  }
+        // End of generated BuildInfo
 
-  doLast() {
-    logging.captureStandardOutput(LogLevel.DEBUG)
-    javaexec {
-      classpath = files(jflexJarFileName)
-      args = listOf(
-          "--nobak",
-          "-d", targetDir,
-          "--skel", skeletonFile,
-          sourceFile
-      )
-    }
+        """
+
+    logger.info("Generating: ${buildInfoFilePath}")
+    val buildInfoFile = File(buildInfoFilePath)
+    buildInfoFile.parentFile.mkdirs()
+    buildInfoFile.writeText(buildInfoClass.trimIndent())
   }
 }
 
@@ -675,7 +792,7 @@ tasks.register("genVhdlSyntax") {
 tasks.register("genFiles") {
   group = "build"
   description = "Generates all generated files."
-  dependsOn("genBuildInfo", "genVhdlSyntax")
+  dependsOn("genBuildInfo")
 }
 
 /**
@@ -692,6 +809,7 @@ tasks.register("createAll") {
   }
   if (OperatingSystem.current().isWindows) {
     dependsOn("createMsi")
+    dependsOn("createWindowsPortableZip")
   }
   if (OperatingSystem.current().isMacOsX) {
     dependsOn("createDmg")
@@ -761,7 +879,7 @@ tasks {
   // Checkstyles related tasks: "checkstylMain" and "checkstyleTest"
   checkstyle {
     // Checkstyle version to use
-    toolVersion = "8.45"
+    toolVersion = "12.1.2"
 
     // let's use google_checks.xml config provided with Checkstyle.
     // https://stackoverflow.com/a/67513272/1235698
